Fixed extra space on the bottom of the comment form.

--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -16,7 +16,7 @@ span.comments_count
 .new_comment_wrap, form.edit_comment
   margin-top: 10px
   padding-bottom: 3px
-  margin-bottom: 10px
+  margin-bottom: 0px
   .marco_avatar
     background: url(/img_3_2/sprite_base.png) 0px -36px no-repeat
     height: 30px
@@ -24,7 +24,7 @@ span.comments_count
     margin:
       right: 6px
       left: 6px
-      bottom: 10px
+      bottom: 0
     float: left
     clear: none
   .field
